Update promotional banner to Holiday Special offer

--- a/Demoappaz204/Pages/Index.cshtml
+++ b/Demoappaz204/Pages/Index.cshtml
@@ -217,8 +217,8 @@
     <div class="promo-banner">
         <div class="row align-items-center">
             <div class="col-md-8">
-                <h2 class="display-4 fw-bold text-white mb-3">🎉 Mega Sale - Up to 70% Off!</h2>
-                <p class="lead text-white mb-4">Limited time offer! Subscribe now and get an extra 10% discount code instantly</p>
+                <h2 class="display-4 fw-bold text-white mb-3">🎉 Holiday Special - Up to 70% Off!</h2>
+                <p class="lead text-white mb-4">Exclusive deals just for you! Subscribe and receive a 15% welcome discount today</p>
                 <div class="input-group mb-3" style="max-width: 500px;">
                     <input type="email" class="form-control form-control-lg" placeholder="Enter your email">
                     <button class="btn btn-light btn-lg" type="button">Subscribe</button>
